[project]
name = "auto-rco-app"
version = "0.1.0"
description = ""
authors = [
    {name = "João Paulo Giron",email = "136199516+Giron-jpg@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.taskipy.tasks]
lint = "poetry run black ."

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pyqt5 = "^5.15.11"
isort = "^6.0.1"
taskipy = "^1.14.1"
selenium = "^4.31.0"
mysql-connector-python = "^9.2.0"

