[project]
name = "auto-rco-app"
version = "0.1.0"
description = ""
authors = [
    {name = "João Paulo Giron",email = "136199516+Giron-jpg@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "auto_rco_app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
